--- a/home-2.html
+++ b/home-2.html
@@ -139,6 +139,8 @@
                         <li><a href="contact.html" class="hover:text-white transition">Help Center</a></li>
                         <li><a href="terms.html" class="hover:text-white transition">Terms</a></li>
                         <li><a href="privacy.html" class="hover:text-white transition">Privacy</a></li>
+                        <li><a href="404.html" class="hover:text-white transition">404 Page</a></li>
+                        <li><a href="coming-soon.html" class="hover:text-white transition">Maintenance</a></li>
                     </ul>
                 </div>
             </div>
