--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <span class="font-bold text-2xl text-slate-900 dark:text-white">Stackly.</span>
                 </a>
 
-                <div class="hidden md:flex items-center gap-8">
+                <div class="hidden md:flex items-center gap-8" id="desktop-menu">
                     <div class="relative group">
                         <button class="flex items-center gap-1 text-sm font-bold text-primary focus:outline-none">
                             Home <i class="ph ph-caret-down"></i>
@@ -112,7 +112,7 @@
             </div>
             <div class="relative">
                 <div class="absolute inset-0 bg-gradient-to-tr from-indigo-500 to-purple-500 rounded-full filter blur-[100px] opacity-30"></div>
-                <img src="https://images.unsplash.com/photo-1593640408182-31c70c8268f5?auto=format&fit=crop&q=80&w=1000" class="relative rounded-3xl shadow-2xl border border-white/20 transform rotate-2 hover:rotate-0 transition duration-500">
+                <img src="https://images.unsplash.com/photo-1593640408182-31c70c8268f5?auto=format&fit=crop&q=80&w=1000" class="relative rounded-3xl shadow-2xl border border-white/20 transition duration-500">
             </div>
         </div>
     </section>
@@ -128,37 +128,40 @@
                 <div>
                     <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Product</h4>
                     <ul class="space-y-2 text-sm text-slate-300">
-                        <li><a href="services.html" class="hover:text-white">Services</a></li>
-                        <li><a href="pricing.html" class="hover:text-white">Pricing</a></li>
-                        <li><a href="auth.html" class="hover:text-white">Login</a></li>
+                        <li><a href="services.html" class="hover:text-white transition">Services</a></li>
+                        <li><a href="pricing.html" class="hover:text-white transition">Pricing</a></li>
+                        <li><a href="gift.html" class="hover:text-white transition">Gift Cards</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Company</h4>
                     <ul class="space-y-2 text-sm text-slate-300">
-                        <li><a href="about.html" class="hover:text-white">About Us</a></li>
-                        <li><a href="contact.html" class="hover:text-white">Contact</a></li>
-                        <li><a href="blog.html" class="hover:text-white">Blog</a></li>
+                        <li><a href="about.html" class="hover:text-white transition">About Us</a></li>
+                        <li><a href="contact.html" class="hover:text-white transition">Contact</a></li>
+                        <li><a href="blog.html" class="hover:text-white transition">Blog</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Support</h4>
                     <ul class="space-y-2 text-sm text-slate-300">
-                        <li><a href="contact.html" class="hover:text-white">Help Center</a></li>
-                        <li><a href="terms.html" class="hover:text-white">Terms</a></li>
-                        <li><a href="privacy.html" class="hover:text-white">Privacy</a></li>
+                        <li><a href="contact.html" class="hover:text-white transition">Help Center</a></li>
+                        <li><a href="terms.html" class="hover:text-white transition">Terms</a></li>
+                        <li><a href="privacy.html" class="hover:text-white transition">Privacy</a></li>
+                        <li><a href="404.html" class="hover:text-white transition">404 Page</a></li>
+                        <li><a href="coming-soon.html" class="hover:text-white transition">Maintenance</a></li>
                     </ul>
                 </div>
             </div>
-            <div class="border-t border-slate-800 pt-8 flex justify-between items-center text-sm text-slate-500">
+            <div class="border-t border-slate-800 pt-8 flex flex-col md:flex-row justify-between items-center text-sm text-slate-500">
                 <p>&copy; 2026 Stackly Inc. All rights reserved.</p>
-                <div class="flex gap-4">
-                    <i class="ph ph-twitter-logo text-lg cursor-pointer hover:text-white"></i>
-                    <i class="ph ph-instagram-logo text-lg cursor-pointer hover:text-white"></i>
+                <div class="flex space-x-6 mt-4 md:mt-0">
+                    <i class="ph ph-twitter-logo text-xl hover:text-white cursor-pointer transition"></i>
+                    <i class="ph ph-instagram-logo text-xl hover:text-white cursor-pointer transition"></i>
                 </div>
             </div>
         </div>
     </footer>
-<script src="nav-highlight.js"></script>
+
+    <script src="nav-highlight.js"></script>
 </body>
 </html>
