--- a/service-details.html
+++ b/service-details.html
@@ -177,12 +177,13 @@
         </div>
     </section>
 
-    <footer class="bg-slate-900 text-white pt-16 pb-8 border-t border-slate-800">
+<footer class="bg-slate-900 text-white pt-16 pb-8 border-t border-slate-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-2 md:grid-cols-4 gap-12 mb-12">
                 <div class="col-span-2 md:col-span-1">
                     <span class="text-2xl font-bold tracking-tight">Stackly.</span>
                     <p class="mt-4 text-slate-400 text-sm">Curating joy, one box at a time.</p>
+                    <p class="mt-4 text-xs text-slate-500 font-mono">Powered by ASR</p>
                 </div>
                 <div>
                     <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Product</h4>
@@ -206,6 +207,8 @@
                         <li><a href="contact.html" class="hover:text-white transition">Help Center</a></li>
                         <li><a href="terms.html" class="hover:text-white transition">Terms</a></li>
                         <li><a href="privacy.html" class="hover:text-white transition">Privacy</a></li>
+                        <li><a href="404.html" class="hover:text-white transition">404 Page</a></li>
+                        <li><a href="coming-soon.html" class="hover:text-white transition">Maintenance</a></li>
                     </ul>
                 </div>
             </div>
